force-app/main/default/objects/debugger__c/debugger__c.object-meta.xml
<CustomObject>
    <label>debugger</label>
    <nameField>
        <displayFormat>debug-{0000000}</displayFormat>
        <label>debugger Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>debugger</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>