force-app/main/default/objects/debugger__c/fields/dateLog__c.field-meta.xml
<CustomField>
    <fullName>dateLog__c</fullName>
    <label>dateLog</label>
    <type>Date</type>
</CustomField>