force-app/main/default/objects/debugger__c/fields/datetimeLog__c.field-meta.xml
<CustomField>
    <fullName>datetimeLog__c</fullName>
    <label>datetimeLog</label>
    <type>DateTime</type>
</CustomField>