force-app/main/default/objects/debugger__c/fields/textAreaLog__c.field-meta.xml
<CustomField>
    <fullName>textAreaLog__c</fullName>
    <label>textAreaLog</label>
    <type>TextArea</type>
</CustomField>