force-app/main/default/objects/debugger__c/fields/textAreaLongLog__c.field-meta.xml
<CustomField>
    <fullName>textAreaLongLog__c</fullName>
    <label>textAreaLongLog</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>