force-app/main/default/objects/debugger__c/fields/timeLog__c.field-meta.xml
<CustomField>
    <fullName>timeLog__c</fullName>
    <label>timeLog</label>
    <type>Time</type>
</CustomField>